cloud-infra-macros/tests/fails/memory_too_low.rs
use cloud_infra_macros::memory;

fn example() {
    let mem = memory!(64);
}

fn main() {}